# GKeyLib

./: CMakeLists.txt  GKey.c  GKey.h  GKeyComp.c  GKeyComp.h  GKeyDecomp.c  GKeyDecomp.h  GMakefile  MakeCommon  Makefile  NMakefile  README.md  RingBuffer.c  RingSearch.c
.github/workflows/: cmake-multi-platform.yml
Internal/: GKeyMisc.h  RingBuffer.h
tests/: CMakeLists.txt  GKeyCompTest.c  GKeyDecompTest.c  GMakefile  Main.c  MakeCommon  Makefile  NMakefile  RingBufferTest.c  Tests.h
